2018-06-15  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.5.