@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
-                      "http://docbook.org/xml/4.2/docbookx.dtd" []>
+                      "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" []>
 
 <book>
 
